--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cloud challenge: Static Website</title>
   </head>
   <body style = "background-color:aliceblue">
-    <h1>Hello there!</h1>
+    <h1>Hello there AGAAAAAAIN FROM LOVELY USA!</h1>
     <p>This static website is hosted on a bucket in GCP.</p>
     <h2>Origin</h2>
     <p>This is one of the results of the 9-week cloud challenge organised by DareIT.</p>
