--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Cloud challenge: Static Website</title>
-  </head>
-  <body style = "background-color:aliceblue">
-    <h1>why you don't work ??!!</h1>
-    <p>This static website is hosted on a bucket in GCP.</p>
-    <h2>Origin</h2>
-    <p>This is one of the results of the 9-week cloud challenge organised by DareIT.</p>
-    <h3>More info</h3>
-    <p>Interested? Feel free to <a href="https://www.dareit.io/challenges/cloud"> visit DareIT</a> to read more.<br>
-    <br>
-    <br>
-    <strong><em>DareIT rocks!</strong></em></p>
+    <head>
+        <title>Dare IT - Task 8: Static website</title>
+    </head>
+    <body style = "background-color:lavenderblush">
+        <h1> Lorem ipsum </h1>
+        <img src="./images/myimage.png" alt="My Image" > 
+    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+       totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
+        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui 
+        dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora 
+        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum 
+        exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem
+         vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum 
+         qui dolorem eum fugiat quo voluptas nulla pariatur? <br></p>
   </body>
 </html>
