--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
         <title>Dare IT - Task 8: Static website</title>
     </head>
     <body style = "background-color:lavenderblush">
-        <h1> Lorem ipsum </h1>
+        <h1> Lorem ipsum - change check </h1>
         <img src="./images/myimage.png" alt="My Image" > 
     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
